--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,36 +1,28 @@
 name: generate animation
 
 on:
-  # roda automaticamente a cada 24h
   schedule:
-    - cron: "0 */24 * * *" 
-  
-  # permite rodar manualmente
+    - cron: "0 */24 * * *"
   workflow_dispatch:
-  
-  # roda a cada push no branch master
   push:
     branches:
-    - master
+      - master
 
 jobs:
   generate:
-    permissions: 
+    permissions:
       contents: write
     runs-on: ubuntu-latest
     timeout-minutes: 5
-    
     steps:
-      # gera a cobrinha a partir do seu gráfico de contribuições
       - name: generate github-contribution-grid-snake.svg
         uses: Platane/snk/svg-only@v3
         with:
           github_user_name: ${{ github.repository_owner }}
           outputs: |
-            dist/github-contribution-grid-snake.svg?palette=neon      # neon para light mode
-            dist/github-contribution-grid-snake-dark.svg?palette=neon-dark  # neon para dark mode
-          
-      # envia os arquivos pro branch de output
+            dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+
       - name: push github-contribution-grid-snake.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
