--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: generate animation
+name: Generate Neon Snake Animation
 
 on:
   schedule:
@@ -13,17 +13,19 @@ jobs:
     permissions:
       contents: write
     runs-on: ubuntu-latest
-    timeout-minutes: 5
+    timeout-minutes: 10
     steps:
-      - name: generate github-contribution-grid-snake.svg
+      # Gera a cobrinha animada
+      - name: Generate neon snake SVGs
         uses: Platane/snk/svg-only@v3
         with:
           github_user_name: ${{ github.repository_owner }}
           outputs: |
-            dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+            dist/github-contribution-grid-snake.svg?palette=neon
+            dist/github-contribution-grid-snake-dark.svg?palette=neon-dark
 
-      - name: push github-contribution-grid-snake.svg to the output branch
+      # Faz push dos SVGs para o branch output
+      - name: Push to output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
