--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Generate Neon Snake Animation
+name: Generate Snake Animation
 
 on:
   schedule:
@@ -15,16 +15,14 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 10
     steps:
-      # Gera a cobrinha animada
-      - name: Generate neon snake SVGs
+      - name: Generate snake SVGs
         uses: Platane/snk/svg-only@v3
         with:
           github_user_name: ${{ github.repository_owner }}
           outputs: |
-            dist/github-contribution-grid-snake.svg?palette=neon
-            dist/github-contribution-grid-snake-dark.svg?palette=neon-dark
+            dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
 
-      # Faz push dos SVGs para o branch output
       - name: Push to output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
